# rq_swear_counter

./: README.md  pyproject.toml  requirements.txt  scriptanalyzer.py  swear_counter.py
