[tool.poetry]
name = "swear_counter"
version = "0.1.0"
description = "Determines swear count in an inputted .docx script (INEX and TMA only)"
authors = ["whitewolfos <whitewolfos#0291>"]

[tool.poetry.dependencies]
python = "^3.7"
docx2txt = "^0.8"
tqdm = "^4.59.0"
profanityfilter = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
